# python-vector

./: .gitignore  CHANGELOG.md  NOTICE  README.md  Untitled.ipynb  docker-compose.yaml  index.html  pgvectorizer.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  tsv_python_getting_started_tutorial.html  vector.html
.github/workflows/: mypy.yaml  pyright.yaml  ruff.yaml  test.yaml
nbs/: 00_vector.ipynb  01_pgvectorizer.ipynb  index.ipynb  nbdev.yml  requirements.txt  sidebar.yml  tsv_python_getting_started_tutorial.ipynb
python_vector/: _modidx.py  core.py
tests/: async_client_test.py  conftest.py  pg_vectorizer_test.py  sync_client_test.py  utils.py
tests/vcr_cassettes/: pg_vectorizer.yaml
timescale_vector/: _modidx.py  client.py  pgvectorizer.py
timescale_vector/client/: __init__.py  async_client.py  index.py  predicates.py  query_builder.py  sync_client.py  utils.py  uuid_time_range.py
timescale_vector/typings/: pgvector.pyi  vcr.pyi
timescale_vector/typings/asyncpg/: __init__.pyi  connection.pyi  pool.pyi
timescale_vector/typings/langchain/docstore/: document.pyi
timescale_vector/typings/langchain_community/vectorstores/: timescalevector.pyi
timescale_vector/typings/psycopg2/: __init__.pyi  extensions.pyi  extras.pyi  pool.pyi
