[project]
name = "timescale-vector"
version = "0.0.9"
description = "Python library for storing vector data in Postgres"
authors = [
    {name = "Matvey Arye", email = "mat@timescale.com"},
]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "python-dotenv>=1.0.1",
    "asyncpg>=0.29.0",
    "psycopg2>=2.9.9",
    "pgvector>=0.3.5",
    "numpy>=1,<2",
]

[project.urls]
repository = "https://github.com/timescale/python-vector"
documentation = "https://timescale.github.io/python-vector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["timescale_vector"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = true

[tool.pyright]
typeCheckingMode = "strict"
stubPath = "timescale_vector/typings"

[tool.ruff]
line-length = 120
indent-width = 4
output-format = "grouped"
target-version = "py310"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "nbs"
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "ARG",
    "W291",
    "PIE",
    "Q"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "langchain>=0.3.3",
    "langchain-openai>=0.2.2",
    "langchain-community>=0.3.2",
    "pandas>=2.2.3",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.386",
]
